--- a/index.html
+++ b/index.html
@@ -14,6 +14,29 @@
 <td align=center><iframe width=650 height=650 name="strony" src="start.html" border="0"></iframe>
 </td>
 <td width=18% align=center><a href="start.html" target="strony">Start</a>
+</td></td>
+<td width=18% align=center><a href="medu_2.html" target="strony">zad2</a>
+</td>
+  </td>
+<td width=18% align=center><a href="medu_3.html" target="strony">zad3</a>
+</td>
+    </td>
+<td width=18% align=center><a href="medu_4.html" target="strony">zad4</a>
+</td>
+    </td>
+<td width=18% align=center><a href="medu_z5_1.html" target="strony">zad5.1</a>
+</td>
+      </td>
+<td width=18% align=center><a href="medu_z5_2.html" target="strony">zad5.2</a>
+</td>
+      </td>
+<td width=18% align=center><a href="medu_z5_3.html" target="strony">zad5.3</a>
+</td>
+      </td>
+<td width=18% align=center><a href="medu_z5_4.html" target="strony">zad5.4</a>
+</td>
+   </td>
+<td width=18% align=center><a href="medu_6.html" target="strony">zad6</a>
 </td>
 </tr>
 </table>
