--- a/index.html
+++ b/index.html
@@ -1,38 +1,28 @@
-<html>
 <head>
 <META HTTP-EQUIV="content-type" CONTENT="text/html; CHARSET=iso-8859-2">
 </head>
-<body>
+<body bgcolor="#ee82ee">
 <table width=95% border="1" align="center">
 <tr>
 <td width=18% align=center>
-  <marquee bgcolor="green">Maksim Medusheuski</marquee>
-<a href="http://www.kuratorium.gda.pl" target="strony">Kuratorium</a>
-<br>
-<a href="http://www.wp.pl" target="strony">Portal WP</a>
-  <br>
-  <a href="start.html" target="strony">Start</a>
-<br>
-<a href="medu_2.html" target="strony">zad2</a>
-<br>
-<a href="medu_3.html" target="strony">zad3</a>
-<br>
-<a href="medu_4.html" target="strony">zad4</a>
-<br>
-<a href="medu_z5_1.html" target="strony">zad5.1</a>
-<br>
-<a href="medu_z5_2.html" target="strony">zad5.2</a>
-<br>
-<a href="medu_z5_3.html" target="strony">zad5.3</a>
-<br>
-<a href="medu_z5_4.html" target="strony">zad5.4</a>
-<br>
-<a href="medu_6.html" target="strony">zad6</a>
+<marquee bgcolor="red">Zadanie CSS/HTML</marquee>
+<marquee bgcolor="red">Zadanie CSS</marquee>
+<p><a href="zad2t.html" target="strony">Zadanie 2</a></p>
+<p><a href="zad3t.html" target="strony">Zadanie 3</a></p>
+<p><a href="zad4t.html" target="strony">Zadanie 4</a></p>
+<p><a href="shem_z5_1.html" target="strony">Zadanie 5_1</a></p>
+<p> <a href="shem_z5_2.html" target="strony">Zadanie 5_2</a></p>
+<p><a href="shem_z5_3.html" target="strony">Zadanie 5_3</a></p>
+<p><a href="shem_z5_4.html" target="strony">Zadanie 5_4</a></p>
+<p><a href="shem_z6.html" target="strony">Zadanie 6</a></p>
 </td>
-<td align=center><iframe width=650 height=650 name="strony" src="start.html" border="0"></iframe>
+<td align=center><iframe width=650 height=650 name="strony" src="start_css.html" border="0"></iframe>
 </td>
 
-</tr>
-</table>
-</body>
-</html>
+<td width=18% align=center>
+<marquee bgcolor="red">Kod zadania CSS/HTML</marquee>
+<marquee bgcolor="red">Kod zadania CSS</marquee>
+<a href="start_css.html" target="strony">Start</a>
+</td>
+
+
