--- a/index.html
+++ b/index.html
@@ -1,28 +1,39 @@
+<html>
 <head>
-<META HTTP-EQUIV="content-type" CONTENT="text/html; CHARSET=iso-8859-2">
+    <META HTTP-EQUIV="content-type" CONTENT="text/html; CHARSET=iso-8859-2">
 </head>
 <body bgcolor="#ee82ee">
 <table width=95% border="1" align="center">
-<tr>
-<td width=18% align=center>
-<marquee bgcolor="red">Zadanie CSS/HTML</marquee>
-<marquee bgcolor="red">Zadanie CSS</marquee>
-<p><a href="zad2t.html" target="strony">Zadanie 2</a></p>
-<p><a href="zad3t.html" target="strony">Zadanie 3</a></p>
-<p><a href="zad4t.html" target="strony">Zadanie 4</a></p>
-<p><a href="shem_z5_1.html" target="strony">Zadanie 5_1</a></p>
-<p> <a href="shem_z5_2.html" target="strony">Zadanie 5_2</a></p>
-<p><a href="shem_z5_3.html" target="strony">Zadanie 5_3</a></p>
-<p><a href="shem_z5_4.html" target="strony">Zadanie 5_4</a></p>
-<p><a href="shem_z6.html" target="strony">Zadanie 6</a></p>
-</td>
-<td align=center><iframe width=650 height=650 name="strony" src="start_css.html" border="0"></iframe>
-</td>
+    <tr>
+        <td width=18% align=center>
+            <marquee bgcolor="red">Zadanie CSS</marquee>
+            <p><a href="medu_2.html" target="strony">Zadanie 2</a></p>
+            <p><a href="medu_3.html" target="strony">Zadanie 3</a></p>
+            <p><a href="medu_4.html"  target="strony">Zadanie 4</a></p>
+            <p><a href="medu_z5_1.html" target="strony">Zadanie 5_1</a></p>
+            <p> <a href="medu_z5_2.html" target="strony">Zadanie 5_2</a></p>
+            <p><a href="medu_z5_3.html" target="strony">Zadanie 5_3</a></p>
+            <p><a href="medu_z5_4.html" target="strony">Zadanie 5_4</a></p>
+            <p><a href="medu_6.html" target="strony">Zadanie 6</a></p>
+           <p><a href="medu_7.html" target="strony">Zadanie 7</a></p>
+           <p><a href="medu_8.html" target="strony">Zadanie 8</a></p>
+           <p><a href="medu_9.html" target="strony">Zadanie 9</a></p>
+           <p><a href="medu_10.html" target="strony">Zadanie 10</a></p>
+           <p><a href="medu_11.html" target="strony">Zadanie 11</a></p>
+           <p><a href="medu_12.html" target="strony">Zadanie 12</a></p>
+           <p><a href="medu_13.html" target="strony">Zadanie 13</a></p>
+           <p><a href="medu_14.html" target="strony">Zadanie 14</a></p>
+           <p><a href="medu_15.html" target="strony">Zadanie 15</a></p>
+        </td>
+        <td align=center><iframe width=650 height=650 name="strony" src="start.html" border="0"></iframe>
+        </td>
 
-<td width=18% align=center>
-<marquee bgcolor="red">Kod zadania CSS/HTML</marquee>
-<marquee bgcolor="red">Kod zadania CSS</marquee>
-<a href="start_css.html" target="strony">Start</a>
-</td>
-
+        <td width=18% align=center>
+            <marquee bgcolor="red">Kod zadania CSS</marquee>
+            <a href="start_css.html" target="strony">Start</a>
+        </td>
+    </tr>
+</table>
+</body>
+</html>
 
