--- a/index.html
+++ b/index.html
@@ -31,6 +31,23 @@
         <td width=18% align=center>
             <marquee bgcolor="red">Kod zadania CSS</marquee>
             <a href="start_css.html" target="strony">Start</a>
+            <p><a href="medu_2_kod.html" target="strony">Zadanie 2</a></p>
+            <p><a href="medu_3_kod.html" target="strony">Zadanie 3</a></p>
+            <p><a href="medu_4_kod.html"  target="strony">Zadanie 4</a></p>
+            <p><a href="medu_z5_1kod.html" target="strony">Zadanie 5_1</a></p>
+            <p> <a href="medu_z5_2kod.html" target="strony">Zadanie 5_2</a></p>
+            <p><a href="medu_z5_3kod.html" target="strony">Zadanie 5_3</a></p>
+            <p><a href="medu_z5_4kod.html" target="strony">Zadanie 5_4</a></p>
+            <p><a href="medu_6_kod.html" target="strony">Zadanie 6</a></p>
+           <p><a href="medu_7_kod.html" target="strony">Zadanie 7</a></p>
+           <p><a href="medu_8_kod.html" target="strony">Zadanie 8</a></p>
+           <p><a href="medu_9_kod.html" target="strony">Zadanie 9</a></p>
+           <p><a href="medu_10_kod.html" target="strony">Zadanie 10</a></p>
+           <p><a href="medu_11_kod.html" target="strony">Zadanie 11</a></p>
+           <p><a href="medu_12_kod.html" target="strony">Zadanie 12</a></p>
+           <p><a href="medu_13_kod.html" target="strony">Zadanie 13</a></p>
+           <p><a href="medu_14_kod.html" target="strony">Zadanie 14</a></p>
+           <p><a href="medu_15_kod.html" target="strony">Zadanie 15</a></p>
         </td>
     </tr>
 </table>
