--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <table width=95% border="1" align="center">
     <tr>
         <td width=18% align=center>
-            <marquee bgcolor="red">Zadanie CSS</marquee>
+            <marquee bgcolor="red">Zadania Maksim Medusheuski</marquee>
             <p><a href="medu_2.html" target="strony">Zadanie 2</a></p>
             <p><a href="medu_3.html" target="strony">Zadanie 3</a></p>
             <p><a href="medu_4.html"  target="strony">Zadanie 4</a></p>
