--- a/medu_13_kod.html
+++ b/medu_13_kod.html
@@ -34,6 +34,16 @@ textarea {
       </body>
       </html>
     </textarea>
+    <h2>CSS-kod</h2>
+    <textarea disabled readonly>
+      body {
+          color: #0000ff;
+          font-size: 30pt;
+      }
+      p {
+          color: rgb(127, 255, 148);
+          font-size: 20pt;
+      }
 
     </textarea>
     <a href="start.html" target="strony">wroć</a>
