--- a/medu_13_kod.html
+++ b/medu_13_kod.html
@@ -20,7 +20,7 @@ textarea {
       <html>
       <head>
       <META HTTP-EQUIV="content-type" CONTENT="text/html">
-      <link href="mysi_z13.css" rel="stylesheet">
+      <link href="med_13.css" rel="stylesheet">
       </head>
       <body>
           <p>:) Zadowolenie, uśmiech</p>
