--- a/medu_13_kod.html
+++ b/medu_13_kod.html
@@ -37,13 +37,13 @@ textarea {
     <h2>CSS-kod</h2>
     <textarea disabled readonly>
       body {
-          color: #0000ff;
-          font-size: 30pt;
-      }
-      p {
-          color: rgb(127, 255, 148);
-          font-size: 20pt;
-      }
+    color: rgb(0, 183, 255);
+    font-size: 51mm;
+}
+p {
+    color: green;
+    font-size: 41mm;
+}  
 
     </textarea>
     <a href="start.html" target="strony">wroć</a>
