--- a/medu_15_kod.html
+++ b/medu_15_kod.html
@@ -20,7 +20,7 @@ textarea {
       <html>
       <head>
       <META HTTP-EQUIV="content-type" CONTENT="text/html">
-      <link href="mysi_z15.css" rel="stylesheet">
+      <link href="medu_15.css" rel="stylesheet">
       </head>
       <body>
           <p>:) Zadowolenie, uśmiech</p>
@@ -34,6 +34,16 @@ textarea {
       </body>
       </html>
     </textarea>
+    <h2>CSS-kod</h2>
+    <textarea disabled readonly>
+body {
+    color: rgb(57%, 36%, 79%);
+    font-size: 30pt;
+}
+p {
+    color: #65AA5C;
+    font-size: 20pt;
+} 
 
     </textarea>
     <a href="start.html" target="strony">wroć</a>
