--- a/medu_17_1.html
+++ b/medu_17_1.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Mysiv</title>
+    <title>medusheuski</title>
     <meta HTTP-EQUIV="content-type" CONTENT="text/html">
 </head>
 <body bgcolor="red">
