--- a/index.html
+++ b/index.html
@@ -24,6 +24,13 @@
            <p><a href="medu_13.html" target="strony">Zadanie 13</a></p>
            <p><a href="medu_14.html" target="strony">Zadanie 14</a></p>
            <p><a href="medu_15.html" target="strony">Zadanie 15</a></p>
+         <p><a href="medu_16.html" target="strony">Zadanie 16</a></p>
+             <p><a href="medu_17.html" target="strony">Zadanie 17</a></p>
+             <p><a href="medu_19.html" target="strony">Zadanie 19</a></p>
+             <p><a href="medu_20.html" target="strony">Zadanie 20</a></p>
+            <p><a href="medu_21.html" target="strony">Zadanie 21</a></p>
+            <p><a href="medu_22.html" target="strony">Zadanie 22</a></p>
+            <p><a href="medu_23.html" target="strony">Zadanie 23</a></p>
         </td>
         <td align=center><iframe width=650 height=650 name="strony" src="start.html" border="0"></iframe>
         </td>
