--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
            <p><a href="medu_14.html" target="strony">Zadanie 14</a></p>
            <p><a href="medu_15.html" target="strony">Zadanie 15</a></p>
          <p><a href="medu_16.html" target="strony">Zadanie 16</a></p>
-             <p><a href="medu_17.html" target="strony">Zadanie 17</a></p>
+             <p><a href="medu_17_1.html" target="strony">Zadanie 17.1</a></p>
+                         <p><a href="medu_17_2.html" target="strony">Zadanie 17.2</a></p>
              <p><a href="medu_19.html" target="strony">Zadanie 19</a></p>
              <p><a href="medu_20.html" target="strony">Zadanie 20</a></p>
             <p><a href="medu_21.html" target="strony">Zadanie 21</a></p>
