--- a/index.html
+++ b/index.html
@@ -56,6 +56,14 @@
            <p><a href="medu_13_kod.html" target="strony">Zadanie 13</a></p>
            <p><a href="medu_14_kod.html" target="strony">Zadanie 14</a></p>
            <p><a href="medu_15_kod.html" target="strony">Zadanie 15</a></p>
+             <p><a href="medu_16kod.html" target="strony">Zadanie 16</a></p>
+            <p><a href="medu_17_1kod.html" target="strony">Zadanie 17.1</a></p>
+            <p><a href="medu_17_2kod.html" target="strony">Zadanie 17.2</a></p>
+            <p><a href="medu_19kod.html" target="strony">Zadanie 19</a></p>
+            <p><a href="medu_20kod.html" target="strony">Zadanie 20</a></p>
+            <p><a href="medu_21kod.html" target="strony">Zadanie 21</a></p>
+            <p><a href="medu_22kod.html" target="strony">Zadanie 22</a></p>
+            <p><a href="medu_23kod.html" target="strony">Zadanie 23</a></p>
         </td>
     </tr>
 </table>
