--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             <p><a href="medu_21.html" target="strony">Zadanie 21</a></p>
             <p><a href="medu_22.html" target="strony">Zadanie 22</a></p>
             <p><a href="medu_23.html" target="strony">Zadanie 23</a></p>
+              <p><a href="medu_32.html" target="strony">Zadanie 32</a></p>
         </td>
         <td align=center><iframe width=650 height=650 name="strony" src="start.html" border="0"></iframe>
         </td>
