--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
             <p><a href="medu_22.html" target="strony">Zadanie 22</a></p>
             <p><a href="medu_23.html" target="strony">Zadanie 23</a></p>
               <p><a href="medu_32.html" target="strony">Zadanie 32</a></p>
+                <p><a href="medu_33.html" target="strony">Zadanie 33</a></p>
+                <p><a href="medu_35.html" target="strony">Zadanie 35</a></p>
+                <p><a href="medu_36.html" target="strony">Zadanie 36</a></p>
         </td>
         <td align=center><iframe width=650 height=650 name="strony" src="start.html" border="0"></iframe>
         </td>
