--- a/index.html
+++ b/index.html
@@ -68,6 +68,10 @@
             <p><a href="medu_21kod.html" target="strony">Zadanie 21</a></p>
             <p><a href="medu_22kod.html" target="strony">Zadanie 22</a></p>
             <p><a href="medu_23kod.html" target="strony">Zadanie 23</a></p>
+             <p><a href="medu_32_kod.html" target="strony">Zadanie 32</a></p>
+             <p><a href="medu_33_kod.html" target="strony">Zadanie 33</a></p>
+             <p><a href="medu_35_kod.html" target="strony">Zadanie 35</a></p>
+             <p><a href="medu_36_kod.html" target="strony">Zadanie 36</a></p>
         </td>
     </tr>
 </table>
