--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <p><a href="medu_21kod.html" target="strony">Zadanie 21</a></p>
             <p><a href="medu_22kod.html" target="strony">Zadanie 22</a></p>
             <p><a href="medu_23kod.html" target="strony">Zadanie 23</a></p>
-             <p><a href="medu_32kod.html" target="strony">Zadanie 32</a></p>
+             <p><a href="medy_32_kod.html" target="strony">Zadanie 32</a></p>
              <p><a href="medu_33_kod.html" target="strony">Zadanie 33</a></p>
              <p><a href="medu_35_kod.html" target="strony">Zadanie 35</a></p>
              <p><a href="medu_36_kod.html" target="strony">Zadanie 36</a></p>
